# dark-current-mlx

./: .gitignore  DEVLOG.md  LICENSE  MAP.md  README.md  eval_pipeline.py  pyproject.toml  schema.json
data/: sample_pairwise.jsonl
docs/: usami_results_note_template.md
src/dark_current_mlx/: __init__.py  cli.py  dataset.py  models.py  pipeline.py  prompts.py  runners.py  verdicts.py
tests/: test_dataset.py  test_pipeline.py  test_verdicts.py
