[project]
name = "dark-current-mlx"
version = "0.1.0"
description = "Local MLX-based psychometric test suite for LLM-as-a-judge 'dark current' bias detection."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mlx>=0.14.0",
    "mlx-lm>=0.14.0",
    "scipy>=1.13.0",
    "numpy>=1.26.0",
    "datasets>=2.19.0",
    "tqdm>=4.66.4"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []
