[project]
name = "dark-current-mlx"
version = "0.1.0"
description = "Local MLX-based psychometric test suite for LLM-as-a-judge 'dark current' bias detection."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
mlx = [
    "mlx>=0.14.0",
    "mlx-lm>=0.14.0"
]
dev = []

[project.scripts]
dark-current-mlx = "dark_current_mlx.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = []
